--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
 					    <TextView
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
-					        android:text="Name:"
+					        android:text="@string/name_label"
 					        android:textColor="#BD0814"
 					        android:textStyle="bold" />
 					    <EditText
@@ -47,7 +47,7 @@
 					    <TextView
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
-					        android:text="Address:"
+					        android:text="@string/address_label"
 					        android:textColor="#BD0814"
 					        android:textStyle="bold" />
 					   	<EditText
@@ -60,30 +60,31 @@
 					    <TextView
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
-					        android:text="Type:"
+					        android:text="@string/type_label"
 					        android:textColor="#BD0814"
 					        android:textStyle="bold" />
 					    <RadioGroup
 					        android:id="@+id/types_of_restaurants_radio">
 					    	<RadioButton
 					            android:id="@+id/take_out"
-					            android:text="Take-Out"
+					            android:text="@string/take_out_label"
 					            android:checked="true" />
 					        <RadioButton 
 					            android:id="@+id/sit_down"
-					            android:text="Sit-Down" />
+					            android:text="@string/sit_down_label" />
 					        <RadioButton
 					            android:id="@+id/delivery"
-					            android:text="Delivery" />
+					            android:text="@string/delivery_label" />
 					    </RadioGroup>
 					</TableRow>
 					<TableRow>
 					    <TextView 
-					        android:text="Notes:"
+					        android:text="@string/notes_label"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"/>
 					    <EditText
 					        android:id="@+id/notes_edit_text"
+					        android:inputType="textMultiLine"
 					        android:singleLine="false"
 					        android:gravity="top"
 					        android:lines="2"
@@ -95,7 +96,7 @@
 					    android:id="@+id/save_button"
 					    android:layout_width="match_parent"
 					    android:layout_height="wrap_content"
-					    android:text="Save" />
+					    android:text="@string/save_button_text" />
 				</TableLayout>
 			</ScrollView>
         </FrameLayout>
