--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item 
         android:id="@+id/toast"
-        android:title="Raise Toast"
+        android:title="@string/toast_menu_option"
         android:icon="@drawable/toast" />
     <item
         android:id="@+id/run"
-        android:title="Run Long Task"
+        android:title="@string/long_task_menu_option"
         android:icon="@drawable/clock" />
 </menu>
