--- a/LunchList/res/layout-land/detail_form.xml
+++ b/LunchList/res/layout-land/detail_form.xml
@@ -5,8 +5,8 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="3"
-        android:shrinkColumns="3" >
+        android:stretchColumns="2"
+        android:shrinkColumns="2" >
         <TableRow>
          	<TextView
 		        android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        android:inputType="text" 
-		        android:layout_span="3" />
+		        android:layout_span="2" />
         </TableRow>
         <TableRow>
 		    <TextView
@@ -33,7 +33,7 @@
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        android:inputType="text"
-		        android:layout_span="3" />
+		        android:layout_span="2" />
         </TableRow>
         <TableRow>
    			<TextView
@@ -55,10 +55,6 @@
 		            android:id="@+id/delivery"
 		            android:text="@string/delivery_label" />
 		    </RadioGroup>
-		    <TextView 
-		        android:text="@string/notes_label"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"/>
 		    <LinearLayout
 		        android:layout_width="match_parent"
 		        android:layout_height="match_parent"
@@ -73,7 +69,13 @@
 			        android:lines="2"
 			        android:scrollHorizontally="false"
 			        android:maxLines="2"
-			        android:maxWidth="200sp" />
+			        android:maxWidth="200sp"
+			        android:hint="@string/notes_label" />
+			    <EditText
+			        android:id="@+id/feed"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:hint="@string/feed_label" />
 				<Button
 				    android:id="@+id/save_button"
 				    android:layout_width="match_parent"
