users now save changes to their restaurants via onPause(); updated portrait and landscape layouts to display long/lat coordinates

--- a/LunchList/res/layout-land/detail_form.xml
+++ b/LunchList/res/layout-land/detail_form.xml
@@ -76,11 +76,20 @@
 			        android:layout_width="match_parent"
 			        android:layout_height="wrap_content"
 			        android:hint="@string/feed_label" />
-				<Button
-				    android:id="@+id/save_button"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-				    android:text="@string/save_button_text" />
+			    <LinearLayout
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:orientation="horizontal" >
+				    <TextView
+				        android:text="@string/location_label"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content" />
+				    <TextView
+				        android:id="@+id/location"
+				        android:text="@string/location_not_set"
+				        android:layout_width="match_parent"
+				        android:layout_height="wrap_content" />
+			    </LinearLayout>
 		    </LinearLayout>
         </TableRow>
     </TableLayout>
