users can save the gps location of a restaurant; this only works if the restaurant has already been saved to the db

--- a/LunchList/res/layout/detail_form.xml
+++ b/LunchList/res/layout/detail_form.xml
@@ -62,7 +62,7 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content" />
 		    <TextView
-		        android:id="@+id/location"
+		        android:id="@+id/location_text_view"
 		        android:text="@string/location_not_set"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content" />
