--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -3,7 +3,8 @@
     <item 
         android:id="@+id/add"
         android:title="@string/add_restaurant"
-        android:icon="@drawable/ic_menu_add" />
+        android:icon="@drawable/ic_menu_add" 
+        android:showAsAction="ifRoom|withText"/>
     <item 
         android:id="@+id/preferences"
         android:title="@string/settings"
