--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>   
-<FrameLayout
+<fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabcontent"
+    class="csci498.cahurley.lunchlist.LunchFragment"
+    android:id="@+id/lunch"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ListView
-    	android:id="@android:id/list"
-    	android:layout_width="match_parent"
-    	android:layout_height="wrap_content" />
-	<TextView
-	    android:id="@android:id/empty"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:text="@string/empty_list_message" />
-</FrameLayout>
+    android:layout_height="match_parent" />
