--- a/LunchList/res/layout-large-land/activity_main.xml
+++ b/LunchList/res/layout-large-land/activity_main.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
->
+    android:orientation="horizontal" >
     <fragment
         class="csci498.cahurley.lunchlist.LunchFragment"
         android:id="@+id/lunch"
