--- a/LunchList/res/xml/preferences.xml
+++ b/LunchList/res/xml/preferences.xml
@@ -23,4 +23,10 @@
         android:defaultValue="true"
         android:summary="@string/use_notification_summary"
         android:dependency="@string/alarm" />
+    <RingtonePreference 
+        android:key="@string/alarm_ringtone"
+        android:title="@string/alarm_ringtone_title"
+        android:summary="@string/alarm_ringtone_summary"
+        android:showSilent="true"
+        android:dependency="alarm"/>
 </PreferenceScreen>
